--- a/index.html
+++ b/index.html
@@ -261,9 +261,10 @@
 		<!--
 	    <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=g-4pcQuinMl2bk4w5xMqBjM2CgnU9WUFR35XW-uIvJo&cl=ffffff&w=a"></script>
 		-->
-		<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw&cl=ffffff&w=a"></script>
+		<!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw&cl=ffffff&w=a"></script> -->
 		<!-- <a href="https://www.revolvermaps.com/livestats/03i43zaco11/"><img src="//ra.revolvermaps.com/h/m/a/0/ff0000/128/0/03i43zaco11.png" width="256" height="128" alt="Map" style="border:0;"></a> -->
-	    </p>
+		<a href="https://clustrmaps.com/site/1aocz"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw&cl=ffffff" /></a>	
+	</p>
 	</div>
 		
 	
