--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				<p> MA.Sc, <a href="http://captain.whu.edu.cn">CAPTAIN</a> Group</p>
 				<p> LIESMARS, Wuhan University</p>
 				<p> Email: jian.ding@whu.edu.cn</p>
-				<p> Github<a href="https://github.com/dingjiansw101">https://github.com/dingjiansw101</a> </p>
+				<p> Github: <a href="https://github.com/dingjiansw101">https://github.com/dingjiansw101</a> </p>
 				<br/>
 				
 				<h3>About</h3>
