--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 	
 
 	<div>
-	    <p align="right">
+	    <p align="center">
 	    <!--
 	    <a href="https://clustrmaps.com/site/19y87" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=g-4pcQuinMl2bk4w5xMqBjM2CgnU9WUFR35XW-uIvJo&cl=ffffff"></a>
 	    -->
