--- a/index.html
+++ b/index.html
@@ -145,22 +145,28 @@
 					<p> Github:
 						<a href="https://github.com/dingjiansw101">https://github.com/dingjiansw101</a>
 					</p>
+					<p> Google Scholar:
+						<a href="https://scholar.google.com.sg/citations?user=5HM8wcgAAAAJ&hl=en">https://scholar.google.com.sg/citations?user=5HM8wcgAAAAJ&hl=en</a>
+					</p>
 					<br/>
 
-					<h3>About</h3>
+					<!-- <h3>About</h3> -->
 					<p>I'm a Ph.D. student (2020-) of
 						<a href="http://www.lmars.whu.edu.cn/en/">LIESMARS</a> at
 						<a href="http://en.whu.edu.cn/">Wuhan University</a>, supervised by Prof.
 						<a href="http://captain.whu.edu.cn/xia_En.html">Gui-Song Xia</a>. My research interests lie on object detection, visual representation learning 
 						and remote sensing. 
 						Recently, My interest focus on self supervised learning.
-						<p>
+					<p>
 
 							<!-- 
 			    I am currently a Ph.D. candidate in <a href="http://www.lmars.whu.edu.cn/en/">LIESMARS</a>, <a href="http://en.whu.edu.cn/">Wuhan University</a>, under the supervision of Prof. 
 				<a href="http://captain.whu.edu.cn/xia_En.html">Gui-Song Xia</a> & Prof. <a href="http://www.lmars.whu.edu.cn/prof_web/zhangliangpei/rs/index.html">Liangpei Zhang</a>. 
 				My current research concentrates on image/video alignment and stitching, computational photography, computer vision, etc. 
 				-->
+				<!-- Recent News -->
+				<!-- submit three papers to CVPR 2021 -->
+
 
 				</div>
 
@@ -186,8 +192,6 @@
 					</ul>
 
 
-					Recent News
-					submit three papers to CVPR 2021
 					<!-- ... -->
 
 					<hr style="height:1px;border:none;border-top:1px solid #d9d9d9;" />
