--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
 					<!-- <h2><p style="font-weight:bold;">Jian Ding</p></h2>  -->
 
 					<!-- <p style="font-size:30px; font-weight:bold;">Jian Ding</p> -->
-					<p> MA.Sc,
+					<!-- <p> MA.Sc,
+						<a href="http://captain.whu.edu.cn">CAPTAIN</a> Group</p> -->
+					<p>
 						<a href="http://captain.whu.edu.cn">CAPTAIN</a> Group</p>
 					<p> LIESMARS, Wuhan University</p>
 					<p> Email: jian.ding@whu.edu.cn</p>
@@ -205,13 +207,15 @@
 							</td>
 							<td>
 								<p>
-									<b>DOTA: A Large-scale Dataset for Object Detection in Aerial Images.</b> [
-									<a href="http://openaccess.thecvf.com/content_cvpr_2018/html/Xia_DOTA_A_Large-Scale_CVPR_2018_paper.html">PDF</a>] </p>
+									<b>DOTA: A Large-scale Dataset for Object Detection in Aerial Images.</b> 
+									[<a href="http://openaccess.thecvf.com/content_cvpr_2018/html/Xia_DOTA_A_Large-Scale_CVPR_2018_paper.html">PDF</a>]
+									[<a href="https://captain-whu.github.io/DOTA/">Project Page</a>]
+								</p>
 								<p>Gui-Song Xia, Xiang Bai, Jian Ding, Zhen Zhu, Serge Belongie, Jiebo Luo, Mihai Datcu, Marcello Pelillo, Liangpei
 									Zhang.</p>
 								<p>
 									<em>CVPR, 2018.</em>
-									<p>
+								<p>
 							</td>
 						</tr>
 
@@ -221,12 +225,49 @@
 							</td>
 							<td>
 								<p>
-									<b>Learning RoI Transformer for Detecting Oriented Objects in Aerial Images.</b> [
-									<a href="https://arxiv.org/abs/1812.00155">PDF</a>] </p>
+									<b>Learning RoI Transformer for Detecting Oriented Objects in Aerial Images.</b> 
+									[<a href="https://arxiv.org/abs/1812.00155">PDF</a>]
+									[<a href="https://github.com/dingjiansw101/AerialDetection">Pytorch Code</a>]
+									[<a href="https://github.com/dingjiansw101/RoITransformer_DOTA">MxNet Code</a>]
+								</p>
 								<p>Jian Ding, Nan Xue, Yang Long, Gui-Song Xia, Qikai Lu.</p>
 								<p>
 									<em>CVPR, 2019.</em>
-									<p>
+								<p>
+							</td>
+						</tr>
+
+						<tr>
+							<td width="174">
+								<img src="images/paper/remotesensing-11-02930-ag-550.jpg" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+							</td>
+							<td>
+								<p>
+									<b>Mask obb: A semantic attention-based mask oriented bounding box representation for multi-category object detection in aerial images.</b> 
+									[<a href="https://www.mdpi.com/2072-4292/11/24/2930">PDF</a>]
+									<!-- [<a href="https://github.com/csuhan/s2anet">Code</a>] -->
+								</p>
+								<p>Jinwang Wang, Jian Ding, Haowen Guo, Wensheng Cheng, Ting Pan, Wen Yang.</p>
+								<p>
+									<em>Remote Sensing, 2019.</em>
+								<p>
+							</td>
+						</tr>
+
+						<tr>
+							<td width="174">
+								<img src="images/paper/s2anet.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+							</td>
+							<td>
+								<p>
+									<b>Learning RoI Transformer for Detecting Oriented Objects in Aerial Images.</b> 
+									[<a href="https://arxiv.org/abs/2008.09397">PDF</a>]
+									[<a href="https://github.com/csuhan/s2anet">Code</a>]
+								</p>
+								<p>Jiaming Han, Jian Ding, Jie Li, Gui-Song Xia.</p>
+								<p>
+									<em>arxiv, 2020.</em>
+								<p>
 							</td>
 						</tr>
 
