--- a/index.html
+++ b/index.html
@@ -166,9 +166,16 @@
 				<a href="http://captain.whu.edu.cn/xia_En.html">Gui-Song Xia</a> & Prof. <a href="http://www.lmars.whu.edu.cn/prof_web/zhangliangpei/rs/index.html">Liangpei Zhang</a>. 
 				My current research concentrates on image/video alignment and stitching, computational photography, computer vision, etc. 
 				-->
-				<!-- Recent News -->
-				<!-- submit three papers to CVPR 2021 -->
-
+				<h3> Recent News </h3>
+				<li style="font-size:16px">
+					<strong>2020-11</strong> Submitted three papers to CVPR 2021. 
+				</li>
+				<li style="font-size:16px">
+					<strong>2020-10</strong> I will serve as reviewer for CVPR 2021.
+				</li>
+				<li style="font-size:16px">
+					<strong>2020-01-31</strong> We release the code of <a href="https://github.com/dingjiansw101/AerialDetection">new benchmarks</a>.
+				</li>
 
 				</div>
 
