--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@
 					<strong>2020-10</strong> I will serve as reviewer for CVPR 2021.
 				</li>
 				<li style="font-size:16px">
-					<strong>2020-01-31</strong> We release the code of <a href="https://github.com/dingjiansw101/AerialDetection">new benchmarks</a>.
+					<strong>2020-01-31</strong> We release the code of <a href="https://github.com/dingjiansw101/AerialDetection">new benchmarks for aerial object detection.</a>.
+				</li>
+				<li style="font-size:16px">
+					<strong>2020-01-31</strong> We release the code of <a href="https://github.com/dingjiansw101/AerialDetection">new benchmarks for aerial object detection.</a>.
 				</li>
 
 				</div>
@@ -263,11 +266,11 @@
 
 						<tr>
 							<td width="174">
-								<img src="images/paper/s2anet.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+								<img src="images/paper/s2anet.jpg" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
 							</td>
 							<td>
 								<p>
-									<b>Learning RoI Transformer for Detecting Oriented Objects in Aerial Images.</b> 
+									<b>Align Deep Features for Oriented Object Detection.</b> 
 									[<a href="https://arxiv.org/abs/2008.09397">PDF</a>]
 									[<a href="https://github.com/csuhan/s2anet">Code</a>]
 								</p>
