--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
 					<strong>2020-10</strong> I will serve as reviewer for CVPR 2021.
 				</li>
 				<li style="font-size:16px">
-					<strong>2020-01-31</strong> We release the code of <a href="https://github.com/dingjiansw101/AerialDetection">new benchmarks for aerial object detection.</a>.
+					<strong>2020-09</strong> We release the <a href="https://github.com/csuhan/s2anet">code</a> of Align Deep Features for Oriented Object Detection.
 				</li>
 				<li style="font-size:16px">
-					<strong>2020-01-31</strong> We release the code of <a href="https://github.com/dingjiansw101/AerialDetection">new benchmarks for aerial object detection.</a>.
+					<strong>2020-02</strong> We release the <a href="https://github.com/dingjiansw101/AerialDetection">code</a> of new benchmarks for aerial object detection.
 				</li>
 
 				</div>
