--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 					<p>I'm a Ph.D. student (2020-) of
 						<a href="http://www.lmars.whu.edu.cn/en/">LIESMARS</a> at
 						<a href="http://en.whu.edu.cn/">Wuhan University</a>, supervised by Prof.
-						<a href="http://captain.whu.edu.cn/xia_En.html">Gui-Song Xia</a>. My research interests lie on object detection, visual representation learning 
-						and remote sensing. 
+						<a href="https://scholar.google.com.hk/citations?user=SAUCVsEAAAAJ&hl=zh-CN">Gui-Song Xia</a>. My research interests lie on object detection, visual representation learning 
+						and remote sensing. I am the maintainer of <a href="https://captain-whu.github.io/DOTA/">DOTA dataset</a> and <a href="https://captain-whu.github.io/iSAID/">iSAID dataset</a>. 
 						Recently, My interest focus on self supervised learning.
 					<p>
 
