--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
 				<li style="font-size:16px">
 					<strong>2020-02</strong> We release the <a href="https://github.com/dingjiansw101/AerialDetection">code</a> of new benchmarks for aerial object detection.
 				</li>
-
+				<li style="font-size:16px">
+					<strong>2019-03</strong> I co-organize the 1st Workshop on <a href="https://captain-whu.github.io/DOAI2019/index.html">Detecting Objects in Aerial Images</a> in conjunction with IEEE CVPR 2019.
+				</li>
 				</div>
 
 				<div class="container">
