--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 					<hr style="height:1px;border:none;border-top:1px solid #d9d9d9;" />
 					<h3 style="text-align:left;">Publications</h3>
-
+					(* Equal Contribution)
 					<table class="mytable" cellspacing="0" cellpadding="0">
 
 						<tr>
@@ -259,7 +259,7 @@
 									[<a href="https://www.mdpi.com/2072-4292/11/24/2930">PDF</a>]
 									<!-- [<a href="https://github.com/csuhan/s2anet">Code</a>] -->
 								</p>
-								<p>Jinwang Wang, Jian Ding, Haowen Guo, Wensheng Cheng, Ting Pan, Wen Yang.</p>
+								<p>Jinwang Wang*, Jian Ding*, Haowen Guo, Wensheng Cheng, Ting Pan, Wen Yang.</p>
 								<p>
 									<em>Remote Sensing, 2019.</em>
 								<p>
