--- a/index.html
+++ b/index.html
@@ -305,9 +305,10 @@
 		-->
 			<!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw&cl=ffffff&w=a"></script> -->
 			<!-- <a href="https://www.revolvermaps.com/livestats/03i43zaco11/"><img src="//ra.revolvermaps.com/h/m/a/0/ff0000/128/0/03i43zaco11.png" width="256" height="128" alt="Map" style="border:0;"></a> -->
-			<a href="https://clustrmaps.com/site/1aocz" title="Visit tracker">
-				<img src="//www.clustrmaps.com/map_v2.png?d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw&cl=ffffff" />
-			</a>
+<!--			<a href="https://clustrmaps.com/site/1aocz" title="Visit tracker">-->
+<!--				<img src="//www.clustrmaps.com/map_v2.png?d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw&cl=ffffff" />-->
+<!--			</a>-->
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw'></script>
 		</p>
 	</div>
 
