--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 									[<a href="https://arxiv.org/abs/2008.09397">PDF</a>]
 									[<a href="https://github.com/csuhan/s2anet">Code</a>]
 								</p>
-								<p>Jiaming Han, Jian Ding, Jie Li, Gui-Song Xia.</p>
+								<p>Jiaming Han*, Jian Ding*, Jie Li, Gui-Song Xia.</p>
 								<p>
 									<em>arxiv, 2020.</em>
 								<p>
