--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				-->
 				<h3> Recent News </h3>
 				<li style="font-size:16px">
-					<strong>2020-11</strong> Submitted three papers to CVPR 2021. 
+					<strong>2021-02</strong> One paper is accepted by CVPR 2021.
 				</li>
 				<li style="font-size:16px">
 					<strong>2020-10</strong> I will serve as reviewer for CVPR 2021.
@@ -278,7 +278,72 @@
 								</p>
 								<p>Jiaming Han*, Jian Ding*, Jie Li, Gui-Song Xia.</p>
 								<p>
-									<em>arxiv, 2020.</em>
+									<em>TGRS, 2020.</em>
+								<p>
+							</td>
+						</tr>
+						<tr>
+							<td width="174">
+								<img src="images/paper/ReDet.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+							</td>
+							<td>
+								<p>
+									<b>ReDet: A Rotation-equivariant Detector for Aerial Object Detection.</b>
+									[<a href="http://arxiv.org/abs/2103.07733">PDF</a>]
+									[<a href="https://github.com/csuhan/ReDet">Code</a>]
+								</p>
+								<p>Jiaming Han*, Jian Ding*, Nan Xue, Gui-Song Xia.</p>
+								<p>
+									<em>CVPR, 2021.</em>
+								<p>
+							</td>
+						</tr>
+
+						<tr>
+							<td width="174">
+								<img src="images/paper/DUPR.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+							</td>
+							<td>
+								<p>
+									<b>Unsupervised Pretraining for Object Detection by Patch Reidentification.</b>
+									[<a href="https://arxiv.org/abs/2103.04814">PDF</a>]
+									[<a href="https://github.com/dingjiansw101/DUPR">Code</a>]
+								</p>
+								<p>Jian Ding*, Enze Xie*, Hang Xu, Chenhan Jiang, Zhenguo Li, Ping Luo, Gui-Song Xia.</p>
+								<p>
+									<em>arxiv, 2021.</em>
+								<p>
+							</td>
+						</tr>
+						<tr>
+							<td width="174">
+								<img src="images/paper/DetCo.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+							</td>
+							<td>
+								<p>
+									<b>DetCo: Unsupervised Contrastive Learning for Object Detection.</b>
+									[<a href="https://arxiv.org/abs/2102.04803">PDF</a>]
+									[<a href="https://github.com/xieenze/DetCo">Code</a>]
+								</p>
+								<p>Enze Xie*, Jian Ding*, Wenhai Wang, Xiaohang Zhan, Hang Xu, Zhenguo Li, Ping Luo.</p>
+								<p>
+									<em>arxiv, 2021.</em>
+								<p>
+							</td>
+						</tr>
+						<tr>
+							<td width="174">
+								<img src="images/paper/Figure1-v3.jpg" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+							</td>
+							<td>
+								<p>
+									<b>Object Detection in Aerial Images: A Large-Scale Benchmark and Challenges.</b>
+									[<a href="https://arxiv.org/abs/2102.12219">PDF</a>]
+									[<a href="https://github.com/dingjiansw101/AerialDetection">Code</a>]
+								</p>
+								<p>Jian Ding, Nan Xue, Gui-Song Xia, Xiang Bai, Wen Yang, Micheal Ying Yang, Serge Belongie, Jiebo Luo, Mihai Datcu, Marcello Pelillo, Liangpei Zhang.</p>
+								<p>
+									<em>arxiv, 2021.</em>
 								<p>
 							</td>
 						</tr>
