--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="CAPTAIN, LIESMARS, WHU" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	-->
-	<title>Jian Ding's homepage | WHU </title>
+	<title>MIng Qian's homepage | WHU </title>
 	<link rel="shortcut icon" href="./favicon.ico">
 	<link rel="icon" href="./favicon.ico">
 	<link rel="bookmark" href="./favicon.ico">
@@ -129,9 +129,9 @@
 
 					<h2>
 						<div>
-							<img src="images/photo/JianDing.JPG" align=right style="width: 15%; height: 18%" />
+							<img src="images\photo\mingqian.jpg" align=right style="width: 13%; height: 15%" />
 						</div>
-						<p style="font-weight:bold;">Jian Ding</p>
+						<p style="font-weight:bold;">Ming Qian</p>
 					</h2>
 
 
@@ -143,22 +143,20 @@
 					<p>
 						<a href="http://captain.whu.edu.cn">CAPTAIN</a> Group</p>
 					<p> LIESMARS, Wuhan University</p>
-					<p> Email: jian.ding@whu.edu.cn</p>
-					<p> Github:
-						<a href="https://github.com/dingjiansw101">https://github.com/dingjiansw101</a>
-					</p>
-					<p> Google Scholar:
-						<a href="https://scholar.google.com.sg/citations?user=5HM8wcgAAAAJ&hl=en">https://scholar.google.com.sg/citations?user=5HM8wcgAAAAJ&hl=en</a>
+					<p> Email: mingqian@whu.edu.cn</p>
+					<!-- <p> Github:
+						<a href="https://github.com/mingqian">https://github.com/mingqian_print</a>
+					</p> -->
+					<p> 
+						<a href="https://scholar.google.com.hk/citations?user=4qLSEkAAAAAJ&hl=zh-CN">google scholar</a>
 					</p>
 					<br/>
 
 					<!-- <h3>About</h3> -->
-					<p>I'm a Ph.D. student (2020-) of
+					<p>I'm a Ph.D. student (2021-) of
 						<a href="http://www.lmars.whu.edu.cn/en/">LIESMARS</a> at
 						<a href="http://en.whu.edu.cn/">Wuhan University</a>, supervised by Prof.
-						<a href="https://scholar.google.com.hk/citations?user=SAUCVsEAAAAJ&hl=zh-CN">Gui-Song Xia</a>. My research interests lie on object detection, visual representation learning 
-						and remote sensing. I am the maintainer of <a href="https://captain-whu.github.io/DOTA/">DOTA dataset</a> and <a href="https://captain-whu.github.io/iSAID/">iSAID dataset</a>. 
-						Recently, My interest focus on self supervised learning.
+						<a href="https://scholar.google.com.hk/citations?user=SAUCVsEAAAAJ&hl=zh-CN">Gui-Song Xia</a>. My research interests lie on remote sensing, image segmentation, low level, multi model.
 					<p>
 
 							<!-- 
@@ -168,9 +166,9 @@
 				-->
 				<h3> Recent News </h3>
 				<li style="font-size:16px">
-					<strong>2021-02</strong> One paper is accepted by CVPR 2021.
+					<strong>2020-02</strong> One paper is accepted by ECCVW 2020.
 				</li>
-				<li style="font-size:16px">
+				<!-- <li style="font-size:16px">
 					<strong>2020-11</strong> I will serve as reviewer for CVPR 2021.
 				</li>
 				<li style="font-size:16px">
@@ -181,7 +179,7 @@
 				</li>
 				<li style="font-size:16px">
 					<strong>2019-03</strong> I co-organize the 1st Workshop on <a href="https://captain-whu.github.io/DOAI2019/index.html">Detecting Objects in Aerial Images</a> in conjunction with IEEE CVPR 2019.
-				</li>
+				</li> -->
 				</div>
 
 				<div class="container">
@@ -194,14 +192,14 @@
 				</ul> -->
 					<ul type="square">
 						<!--disc,circle,square-->
-						<li>Ph.D. in Communication and Information System, 2020-
+						<li>Ph.D. in Photography and remote sensing, 2021-
 							<br/> Wuhan University, China
 						</li>
-						<li>M.Sc in Communication and Information System, 2017-2020
-							<br/> Wuhan University, China
+						<li>M.Sc in Control Engineering, 2018-2021
+							<br/> Nanjing University of Information Science and Technology, China
 						</li>
-						<li>B.Sc in Aircraft Design and Engineering, 2013-2017
-							<br/> Northwestern Polytechnical University, China
+						<li>B.Sc in Automation, 2014-2018
+							<br/> Nanjing University of Information Science and Technology, China
 						</li>
 					</ul>
 
@@ -213,140 +211,23 @@
 					(* Equal Contribution)
 					<table class="mytable" cellspacing="0" cellpadding="0">
 
-						<tr>
+						<tr> 
 							<td width="174">
-								<img src="images/paper/instances-DOTA.jpg" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
+								<img src="images\paper\bggan.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
 							</td>
 							<td>
 								<p>
-									<b>DOTA: A Large-scale Dataset for Object Detection in Aerial Images.</b> 
-									[<a href="http://openaccess.thecvf.com/content_cvpr_2018/html/Xia_DOTA_A_Large-Scale_CVPR_2018_paper.html">PDF</a>]
-									[<a href="https://captain-whu.github.io/DOTA/">Project Page</a>]
+									<b>BGGAN: Bokeh-Glass Generative Adversarial Network for Rendering Realistic Bokeh.</b> 
+									[<a href="https://link.springer.com/chapter/10.1007/978-3-030-67070-2_14">PDF</a>]
+									<!-- [<a href="https://captain-whu.github.io/DOTA/">Project Page</a>] -->
 								</p>
-								<p>Gui-Song Xia, Xiang Bai, Jian Ding, Zhen Zhu, Serge Belongie, Jiebo Luo, Mihai Datcu, Marcello Pelillo, Liangpei
-									Zhang.</p>
+								<p>Ming Qian, Congyu Qiao, Jiamin Lin, Zhenyu Guo, Chenghua Li, Cong Leng, Jian Cheng.</p>
 								<p>
-									<em>CVPR, 2018.</em>
+									<em>ECCVW, 2020.</em>
 								<p>
 							</td>
 						</tr>
 
-						<tr>
-							<td width="174">
-								<img src="images/paper/RoITransformer.jpg" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
-							</td>
-							<td>
-								<p>
-									<b>Learning RoI Transformer for Detecting Oriented Objects in Aerial Images.</b> 
-									[<a href="https://arxiv.org/abs/1812.00155">PDF</a>]
-									[<a href="https://github.com/dingjiansw101/AerialDetection">Pytorch Code</a>]
-									[<a href="https://github.com/dingjiansw101/RoITransformer_DOTA">MxNet Code</a>]
-								</p>
-								<p>Jian Ding, Nan Xue, Yang Long, Gui-Song Xia, Qikai Lu.</p>
-								<p>
-									<em>CVPR, 2019.</em>
-								<p>
-							</td>
-						</tr>
-
-						<tr>
-							<td width="174">
-								<img src="images/paper/remotesensing-11-02930-ag-550.jpg" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
-							</td>
-							<td>
-								<p>
-									<b>Mask obb: A semantic attention-based mask oriented bounding box representation for multi-category object detection in aerial images.</b> 
-									[<a href="https://www.mdpi.com/2072-4292/11/24/2930">PDF</a>]
-									<!-- [<a href="https://github.com/csuhan/s2anet">Code</a>] -->
-								</p>
-								<p>Jinwang Wang*, Jian Ding*, Haowen Guo, Wensheng Cheng, Ting Pan, Wen Yang.</p>
-								<p>
-									<em>Remote Sensing, 2019.</em>
-								<p>
-							</td>
-						</tr>
-
-						<tr>
-							<td width="174">
-								<img src="images/paper/s2anet.jpg" class=" img-bordered" alt="photo" width="174" height="45" hspace="10">
-							</td>
-							<td>
-								<p>
-									<b>Align Deep Features for Oriented Object Detection.</b> 
-									[<a href="https://arxiv.org/abs/2008.09397">PDF</a>]
-									[<a href="https://github.com/csuhan/s2anet">Code</a>]
-								</p>
-								<p>Jiaming Han*, Jian Ding*, Jie Li, Gui-Song Xia.</p>
-								<p>
-									<em>TGRS, 2020.</em>
-								<p>
-							</td>
-						</tr>
-						<tr>
-							<td width="174">
-								<img src="images/paper/ReDet.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
-							</td>
-							<td>
-								<p>
-									<b>ReDet: A Rotation-equivariant Detector for Aerial Object Detection.</b>
-									[<a href="http://arxiv.org/abs/2103.07733">PDF</a>]
-									[<a href="https://github.com/csuhan/ReDet">Code</a>]
-								</p>
-								<p>Jiaming Han*, Jian Ding*, Nan Xue, Gui-Song Xia.</p>
-								<p>
-									<em>CVPR, 2021.</em>
-								<p>
-							</td>
-						</tr>
-
-						<tr>
-							<td width="174">
-								<img src="images/paper/DUPR.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
-							</td>
-							<td>
-								<p>
-									<b>Unsupervised Pretraining for Object Detection by Patch Reidentification.</b>
-									[<a href="https://arxiv.org/abs/2103.04814">PDF</a>]
-									[<a href="https://github.com/dingjiansw101/DUPR">Code</a>]
-								</p>
-								<p>Jian Ding*, Enze Xie*, Hang Xu, Chenhan Jiang, Zhenguo Li, Ping Luo, Gui-Song Xia.</p>
-								<p>
-									<em>arxiv, 2021.</em>
-								<p>
-							</td>
-						</tr>
-						<tr>
-							<td width="174">
-								<img src="images/paper/DetCo.png" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
-							</td>
-							<td>
-								<p>
-									<b>DetCo: Unsupervised Contrastive Learning for Object Detection.</b>
-									[<a href="https://arxiv.org/abs/2102.04803">PDF</a>]
-									[<a href="https://github.com/xieenze/DetCo">Code</a>]
-								</p>
-								<p>Enze Xie*, Jian Ding*, Wenhai Wang, Xiaohang Zhan, Hang Xu, Zhenguo Li, Ping Luo.</p>
-								<p>
-									<em>arxiv, 2021.</em>
-								<p>
-							</td>
-						</tr>
-						<tr>
-							<td width="174">
-								<img src="images/paper/Figure1-v3.jpg" class=" img-bordered" alt="photo" width="174" height="100" hspace="10">
-							</td>
-							<td>
-								<p>
-									<b>Object Detection in Aerial Images: A Large-Scale Benchmark and Challenges.</b>
-									[<a href="https://arxiv.org/abs/2102.12219">PDF</a>]
-									[<a href="https://github.com/dingjiansw101/AerialDetection">Code</a>]
-								</p>
-								<p>Jian Ding, Nan Xue, Gui-Song Xia, Xiang Bai, Wen Yang, Micheal Ying Yang, Serge Belongie, Jiebo Luo, Mihai Datcu, Marcello Pelillo, Liangpei Zhang.</p>
-								<p>
-									<em>arxiv, 2021.</em>
-								<p>
-							</td>
-						</tr>
 
 					</table>
 
@@ -406,7 +287,7 @@
 
 
 
-	<p align="center">Copyright &#169; Jian Ding
+	<p align="center">Copyright &#169; Ming Qian
 		<a href="index.html/#Top">&nbsp;</a>
 	</p>
 	<p align="center">
