--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 	<p style="text-align:center;">
 		<!--<strong>-->
 		-------- [
-		<a href="https://scholar.google.co.jp/citations?user=5HM8wcgAAAAJ&hl=zh-CN"> Google Scholar </a> ] --------
+		<a href="https://scholar.google.com.hk/citations?user=4qLSEkAAAAAJ&hl=zh-CN"> Google Scholar </a> ] --------
 		<!--</strong>-->
 	</p>
 
