--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 <!--				<img src="//www.clustrmaps.com/map_v2.png?d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw&cl=ffffff" />-->
 <!--			</a>-->
 <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=T7TChcH2i2bPC92LOiVhGEiRssA1ZiYgU3WgZk3NjJw'></script> -->
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=U6yghMl2iRcyo6NlnCnTAUeJckEc2EQ0Sa9DlKcrLhY&cl=ffffff&w=a"></script>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=U6yghMl2iRcyo6NlnCnTAUeJckEc2EQ0Sa9DlKcrLhY&cl=ffffff&w=a"></script>
 		</p>
 	</div>
 
