--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								<p>
 									<b>BGGAN: Bokeh-Glass Generative Adversarial Network for Rendering Realistic Bokeh.</b> 
 									[<a href="https://link.springer.com/chapter/10.1007/978-3-030-67070-2_14">PDF</a>]
-									<!-- [<a href="https://captain-whu.github.io/DOTA/">Project Page</a>] -->
+									[<a href="https://github.com/qianmingduowan/AIM2020-bokeh-BGNet/">Code</a>]
 								</p>
 								<p>Ming Qian, Congyu Qiao, Jiamin Lin, Zhenyu Guo, Chenghua Li, Cong Leng, Jian Cheng.</p>
 								<p>
