--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
 
 					<!-- <p> MA.Sc,
-						<a href="http://www.captain-whu.com/">CAPTAIN</a> Group</p> -->
+						<a href="http://www.captain-whu.com/team.html/">CAPTAIN</a> Group</p> -->
 					<p>
-						<a href="http://www.captain-whu.com/">CAPTAIN</a> Group</p>
+						<a href="http://www.captain-whu.com/team.html/">CAPTAIN</a> Group</p>
 					<p> LIESMARS, Wuhan University</p>
 					<p> Email: mingqian@whu.edu.cn</p>
 					<!-- <p> Github:
